2003-10-30  John Levon  <levon@movementarian.org>

	* libutil++/tests/string_manip_tests.cpp: fix tobool test
	("33" is not castable to boool)

2003-10-30  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp:
	* libutil++/string_manip.h: remove tostr()/tobool/touint(), rename
	  lexical_cast_no_ws<> to op_lexical_cast<>

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* libpp/arrange_profiles.cpp:
	* libpp/filename_spec.cpp:
	* libpp/op_header.cpp:
	* libutil++/comma_list.h:
	* libutil++/generic_spec.h:
	* libutil++/tests/string_manip_tests.cpp: use op_lexical_cast<>

2003-10-29  John Levon  <levon@movementarian.org>

	* pp/common_option.h: use std namespace

2003-10-28  Jason Lunz  <lunz@falooley.org>

	* doc/oprofile.1.in: document cpu,tid,tgid in profile
	spec

2003-10-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.cpp: error out for all tag:value specified
	  more than once.

2003-10-29  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opannotate.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml:
	* libregex/demangle_symbol.cpp:
	* libregex/demangle_symbol.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: remove --no-demangle, --smart-demangle and
	  --demangle, replace them with --demangle=none|smart|normal

2003-10-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests: new directory
	* libutil++/tests/string_manip_tests.cpp: new tests file
	* configure.in:
	* libutil++/Makefile.am:
	* libutil++/tests/.cvsignore:
	* libutil++/tests/Makefile.am: handle new test

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: correct implementation of separate_token
	  to match the documentation
	* daemon/liblegacy/opd_image.c: fix comment

2003-10-28  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/count_array.cpp:
	* libpp/count_array.h:
	* libpp/locate_images.h:
	* libpp/parse_filename.cpp:
	* libpp/profile.cpp: