@@ -5,9 +5,12 @@ COMMON_LIBS = ../../libutil/libutil.a ../libutil++.a
 
 AM_CXXFLAGS = @OP_CXXFLAGS@
 
-check_PROGRAMS = string_manip_tests
+check_PROGRAMS = string_manip_tests string_filter_tests
 
 string_manip_tests_SOURCES = string_manip_tests.cpp
 string_manip_tests_LDADD = ${COMMON_LIBS}
+
+string_filter_tests_SOURCES = string_filter_tests.cpp
+string_filter_tests_LDADD = ${COMMON_LIBS}
 
 TESTS = ${check_PROGRAMS}
